Refactor compliance pages with proper styling

--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -3,68 +3,135 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Squidworks AI - Privacy Policy</title>
-  <meta name="description" content="Squidworks AI Privacy Policy" />
+  <title>Privacy Policy — Squidworks AI</title>
+  <meta name="description" content="Privacy Policy for Squidworks AI" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg0:#070A14;
+      --bg1:#0B1220;
+      --panel:rgba(255,255,255,.06);
+      --panel2:rgba(255,255,255,.04);
+      --text:#EAF0FF;
+      --muted:#B8C4E6;
+      --line:rgba(255,255,255,.12);
+      --accent:#FF7A3D;      /* ember */
+      --accent2:#3DE7FF;     /* cyan */
+      --ok:#3CFFA0;
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      color:var(--text);
+      background:linear-gradient(180deg, var(--bg1), var(--bg0));
+      line-height: 1.6;
+    }
+    a{color:inherit;transition:color .2s}
+    a:hover{color:var(--accent)}
+
+    .wrap{max-width:800px;margin:0 auto;padding:26px 20px 34px}
+
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:16px;margin-bottom:40px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px;text-decoration:none;color:var(--text)}
+    .brand .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    
+    .content{
+      background:linear-gradient(180deg, var(--panel), var(--panel2));
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:40px;
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(10px);
+    }
+
+    h1{font-size:32px;margin:0 0 10px;letter-spacing:-.02em;line-height:1.2}
+    h2{font-size:20px;margin:30px 0 15px;color:#fff;border-top:1px solid var(--line);padding-top:30px}
+    h2:first-of-type{border-top:none;padding-top:0}
+    
+    p, li{color:var(--muted);font-size:15px}
+    ul{margin:0;padding-left:20px}
+    li{margin-bottom:8px}
+
+    .meta{font-size:13px;color:rgba(184,196,230,.6);margin-bottom:30px;font-family:monospace}
+
+    .footer{margin-top:40px;border-top:1px solid var(--line);padding-top:20px;color:rgba(184,196,230,.5);font-size:13px;text-align:center}
+    .footer a{text-decoration:none;margin:0 10px}
+
+    @media(max-width:600px){
+      .content{padding:24px}
+      h1{font-size:26px}
+    }
+  </style>
 </head>
 <body>
-<pre>
-Privacy Policy
-Effective Date: 9/22/2025
-Last Updated: 9/22/2025
+  <div class="wrap">
+    <div class="nav">
+      <a href="/" class="brand"><span class="dot"></span> Squidworks AI</a>
+      <a href="/" style="font-size:14px;font-weight:600;text-decoration:none">← Back</a>
+    </div>
 
-At Squidworks AI, we value your privacy. This Privacy Policy outlines how we collect, use, and protect your information when you use our website, services, and messaging programs.
+    <div class="content">
+      <h1>Privacy Policy</h1>
+      <div class="meta">Effective Date: 9/22/2025 • Last Updated: 9/22/2025</div>
 
-1. Information We Collect
-We may collect the following types of information:
+      <p>At Squidworks AI, we value your privacy. This Privacy Policy outlines how we collect, use, and protect your information when you use our website, services, and messaging programs.</p>
 
-Contact information (name, email address, phone number, etc.)
+      <h2>1. Information We Collect</h2>
+      <p>We may collect the following types of information:</p>
+      <ul>
+        <li>Contact information (name, email address, phone number, etc.)</li>
+        <li>Business information (company name, service needs, etc.)</li>
+        <li>Usage information related to our website, services, and communications</li>
+      </ul>
 
-Business information (company name, service needs, etc.)
+      <h2>2. How We Use Your Information</h2>
+      <p>We use the information we collect to:</p>
+      <ul>
+        <li>Provide, operate, and improve our services</li>
+        <li>Deliver SMS alerts, notifications, and updates you opt into</li>
+        <li>Communicate with you about appointments, offers, or account information</li>
+        <li>Respond to customer inquiries and provide support</li>
+        <li>Maintain compliance with applicable laws and regulations</li>
+      </ul>
 
-Usage information related to our website, services, and communications
+      <h2>3. SMS/Text Messaging Compliance</h2>
+      <p>No mobile information will be shared with any external parties for marketing or promotional purposes.</p>
+      <p>Text messaging opt-in data and consent will not be disclosed to any external parties, except to aggregators and providers that support the delivery of our text message services.</p>
+      <p>If you choose to opt out of SMS communications by replying “STOP,” you will no longer receive SMS messages from us until you rejoin.</p>
 
-2. How We Use Your Information
-We use the information we collect to:
+      <h2>4. Information Sharing</h2>
+      <p>We do not disclose your personal information except as necessary to support our business operations. This may include sharing with service providers who assist with tasks such as customer service, IT support, or data storage.</p>
+      <p><strong>Important Note:</strong> All the above categories exclude text messaging originator opt-in data and consent; this information will not be disclosed to any external parties, excluding aggregators and providers of the text message services.</p>
 
-Provide, operate, and improve our services
+      <h2>5. Data Security</h2>
+      <p>We take appropriate measures to protect your information from unauthorized access, alteration, or misuse. While no system is completely secure, we work to ensure your data is handled responsibly and safely.</p>
 
-Deliver SMS alerts, notifications, and updates you opt into
+      <h2>6. Your Rights and Choices</h2>
+      <p>You may opt out of SMS communications at any time by replying “STOP” to a message you receive.</p>
+      <p>You may also request access, correction, or deletion of your personal information by contacting us at <a href="mailto:support@squidworksai.com">support@squidworksai.com</a>.</p>
 
-Communicate with you about appointments, offers, or account information
+      <h2>7. Updates to This Policy</h2>
+      <p>We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated effective date.</p>
 
-Respond to customer inquiries and provide support
+      <h2>8. Contact Us</h2>
+      <p>If you have questions about this Privacy Policy or our data practices, please contact us at:</p>
+      <p>
+        📧 Email: <a href="mailto:support@squidworksai.com">support@squidworksai.com</a><br/>
+        📞 Phone: (843) 376-6826
+      </p>
+    </div>
 
-Maintain compliance with applicable laws and regulations
-
-3. SMS/Text Messaging Compliance
-No mobile information will be shared with any external parties for marketing or promotional purposes.
-
-Text messaging opt-in data and consent will not be disclosed to any external parties, except to aggregators and providers that support the delivery of our text message services.
-
-If you choose to opt out of SMS communications by replying “STOP,” you will no longer receive SMS messages from us until you rejoin.
-
-4. Information Sharing
-We do not disclose your personal information except as necessary to support our business operations. This may include sharing with service providers who assist with tasks such as customer service, IT support, or data storage.
-
-Important Note: All the above categories exclude text messaging originator opt-in data and consent; this information will not be disclosed to any external parties, excluding aggregators and providers of the text message services.
-
-5. Data Security
-We take appropriate measures to protect your information from unauthorized access, alteration, or misuse. While no system is completely secure, we work to ensure your data is handled responsibly and safely.
-
-6. Your Rights and Choices
-You may opt out of SMS communications at any time by replying “STOP” to a message you receive.
-
-You may also request access, correction, or deletion of your personal information by contacting us at support@squidworksai.com.
-
-7. Updates to This Policy
-We may update this Privacy Policy from time to time. Any changes will be reflected on this page with an updated effective date.
-
-8. Contact Us
-If you have questions about this Privacy Policy or our data practices, please contact us at:
-
-📧 Email: support@squidworksai.com
-
-📞 Phone: (843) 376-6826
-</pre>
+    <div class="footer">
+      <a href="/pricing.html">Pricing</a>
+      <a href="/sms-terms.html">SMS Terms</a>
+      <a href="/privacy-policy.html">Privacy Policy</a>
+    </div>
+  </div>
 </body>
 </html>
