--- a/public/sms-terms.html
+++ b/public/sms-terms.html
@@ -3,46 +3,118 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Squidworks AI - SMS Terms and Conditions</title>
-  <meta name="description" content="Squidworks AI SMS Terms and Conditions" />
+  <title>SMS Terms — Squidworks AI</title>
+  <meta name="description" content="SMS Terms and Conditions for Squidworks AI" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg0:#070A14;
+      --bg1:#0B1220;
+      --panel:rgba(255,255,255,.06);
+      --panel2:rgba(255,255,255,.04);
+      --text:#EAF0FF;
+      --muted:#B8C4E6;
+      --line:rgba(255,255,255,.12);
+      --accent:#FF7A3D;      /* ember */
+      --accent2:#3DE7FF;     /* cyan */
+      --ok:#3CFFA0;
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+    }
+
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;
+      color:var(--text);
+      background:linear-gradient(180deg, var(--bg1), var(--bg0));
+      line-height: 1.6;
+    }
+    a{color:inherit;transition:color .2s}
+    a:hover{color:var(--accent)}
+
+    .wrap{max-width:800px;margin:0 auto;padding:26px 20px 34px}
+
+    .nav{display:flex;align-items:center;justify-content:space-between;gap:16px;margin-bottom:40px}
+    .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px;text-decoration:none;color:var(--text)}
+    .brand .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    
+    .content{
+      background:linear-gradient(180deg, var(--panel), var(--panel2));
+      border:1px solid var(--line);
+      border-radius:18px;
+      padding:40px;
+      box-shadow:var(--shadow);
+      backdrop-filter: blur(10px);
+    }
+
+    h1{font-size:32px;margin:0 0 10px;letter-spacing:-.02em;line-height:1.2}
+    h2{font-size:18px;margin:30px 0 10px;color:#fff;font-weight:700}
+    
+    p, li{color:var(--muted);font-size:15px;margin-bottom:16px}
+    ul{margin:0;padding-left:20px}
+
+    .meta{font-size:13px;color:rgba(184,196,230,.6);margin-bottom:30px;font-family:monospace}
+
+    .footer{margin-top:40px;border-top:1px solid var(--line);padding-top:20px;color:rgba(184,196,230,.5);font-size:13px;text-align:center}
+    .footer a{text-decoration:none;margin:0 10px}
+
+    @media(max-width:600px){
+      .content{padding:24px}
+      h1{font-size:26px}
+    }
+  </style>
 </head>
 <body>
-<pre>
-SMS Terms and Conditions
-Program Name: Squidworks AI SMS Alerts
-Effective Date: 9/22/2025
-Last Updated: 9/22/2025
+  <div class="wrap">
+    <div class="nav">
+      <a href="/" class="brand"><span class="dot"></span> Squidworks AI</a>
+      <a href="/" style="font-size:14px;font-weight:600;text-decoration:none">← Back</a>
+    </div>
 
-Program Description
-By opting into Squidworks AI Alerts, you agree to receive SMS messages related to our services. These may include appointment reminders, product updates, promotional offers, account notifications, and other information to help you grow and manage your business. Message frequency will vary based on your interactions with us.
+    <div class="content">
+      <h1>SMS Terms and Conditions</h1>
+      <div class="meta">Program Name: Squidworks AI SMS Alerts • Effective Date: 9/22/2025</div>
 
-Opt-Out Instructions
-You can cancel the SMS service at any time. Simply text “STOP” to our shortcode. After you send “STOP,” we will send you a confirmation SMS to verify your unsubscribe status. Once confirmed, you will no longer receive SMS messages from us.
+      <h2>Program Description</h2>
+      <p>By opting into Squidworks AI Alerts, you agree to receive SMS messages related to our services. These may include appointment reminders, product updates, promotional offers, account notifications, and other information to help you grow and manage your business. Message frequency will vary based on your interactions with us.</p>
 
-Rejoining Instructions
-If you wish to rejoin our SMS program after unsubscribing, simply opt in again the same way you did the first time (through our website, form, or keyword sign-up). Once you do, we will resume sending SMS messages to you.
+      <h2>Opt-Out Instructions</h2>
+      <p>You can cancel the SMS service at any time. Simply text “STOP” to our shortcode. After you send “STOP,” we will send you a confirmation SMS to verify your unsubscribe status. Once confirmed, you will no longer receive SMS messages from us.</p>
 
-Help Instructions
-If you experience issues with the messaging program, reply with the keyword “HELP” for assistance. You can also contact us directly at:
+      <h2>Rejoining Instructions</h2>
+      <p>If you wish to rejoin our SMS program after unsubscribing, simply opt in again the same way you did the first time (through our website, form, or keyword sign-up). Once you do, we will resume sending SMS messages to you.</p>
 
-📧 Email: support@squidworksai.com
+      <h2>Help Instructions</h2>
+      <p>If you experience issues with the messaging program, reply with the keyword “HELP” for assistance. You can also contact us directly at:</p>
+      <p>
+        📧 Email: <a href="mailto:support@squidworksai.com">support@squidworksai.com</a><br/>
+        📞 Phone: (843) 376-6826
+      </p>
 
-📞 Phone: (843) 376-6826
+      <h2>Carrier Liability Disclaimer</h2>
+      <p>Wireless carriers are not liable for delayed or undelivered messages.</p>
 
-Carrier Liability Disclaimer
-Wireless carriers are not liable for delayed or undelivered messages.
+      <h2>Message & Data Rates Disclaimer</h2>
+      <p>As always, message and data rates may apply for messages sent to you from us and to us from you. Message frequency may vary. For questions about your text or data plan, please contact your wireless provider.</p>
 
-Message & Data Rates Disclaimer
-As always, message and data rates may apply for messages sent to you from us and to us from you. Message frequency may vary. For questions about your text or data plan, please contact your wireless provider.
+      <h2>Privacy Policy</h2>
+      <p>For more information on how we collect and use your data, please refer to our <a href="/privacy-policy.html">Privacy Policy</a>.</p>
 
-Privacy Policy
-For more information on how we collect and use your data, please refer to our Privacy Policy: Squidworks AI: Privacy Policy
+      <h2>Compliance with Industry Standards</h2>
+      <p>Our SMS program is designed to comply with CTIA, TCPA, and other industry regulations and standards for responsible messaging practices.</p>
 
-Compliance with Industry Standards
-Our SMS program is designed to comply with CTIA, TCPA, and other industry regulations and standards for responsible messaging practices.
+      <h2>Legal Compliance</h2>
+      <p>By opting into our SMS program, you acknowledge and agree to comply with all applicable federal, state, and local laws and regulations governing messaging.</p>
+    </div>
 
-Legal Compliance
-By opting into our SMS program, you acknowledge and agree to comply with all applicable federal, state, and local laws and regulations governing
-</pre>
+    <div class="footer">
+      <a href="/pricing.html">Pricing</a>
+      <a href="/sms-terms.html">SMS Terms</a>
+      <a href="/privacy-policy.html">Privacy Policy</a>
+    </div>
+  </div>
 </body>
 </html>
