Add explicit SMS consent checkbox for Battle Buddy

--- a/public/battle-buddy.html
+++ b/public/battle-buddy.html
@@ -59,6 +59,16 @@
     <label for="goal">What would help me help you?</label>
     <textarea id="goal" name="goal" rows="5" placeholder="What are you hoping to get out of AI? Optional, but helpful."></textarea>
 
+    <label style="display:flex;gap:10px;align-items:flex-start;font-weight:400;color:#d1d5db;margin-top:4px">
+      <input type="checkbox" name="sms_consent" value="yes" style="width:auto; margin-top:3px" />
+      <span>
+        Yes, you can text me about this request (message &amp; data rates may apply).
+        <span style="display:block;color:#9ca3af;font-size:.9rem;margin-top:6px">
+          See <a href="/sms-terms.html">SMS Terms</a>.
+        </span>
+      </span>
+    </label>
+
     <button type="submit">Count Me In</button>
 
     <div class="fine">
