Add helper text under Battle Buddy goal field

--- a/public/battle-buddy.html
+++ b/public/battle-buddy.html
@@ -58,6 +58,9 @@
 
     <label for="goal">What would help me help you?</label>
     <textarea id="goal" name="goal" rows="5" placeholder="What are you hoping to get out of AI? Optional, but helpful."></textarea>
+    <div style="color:#9ca3af;font-size:.9rem;line-height:1.35;margin:-10px 0 14px">
+      1–2 sentences is perfect. If you’re not sure yet, that’s okay — tell us what you’re carrying.
+    </div>
 
     <label style="display:flex;gap:10px;align-items:flex-start;font-weight:400;color:#d1d5db;margin-top:4px">
       <input type="checkbox" name="sms_consent" value="yes" style="width:auto; margin-top:3px" />
