Add /vets lead capture page + tag

--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,7 @@
       <div class="brand"><span class="dot"></span> Squidworks AI</div>
       <div class="pill">
         <a href="/pricing.html" class="btn ghost">Pricing</a>
+        <a href="/vets.html" class="btn ghost">Vets</a>
         <a href="/intake.html" class="btn primary">Get a demo</a>
       </div>
     </div>
