Add SMS consent checkbox to /vets page

--- a/public/vets.html
+++ b/public/vets.html
@@ -97,6 +97,16 @@
           <label>Phone (optional)</label>
           <input name="phone" placeholder="Optional" />
 
+          <label style="display:flex;gap:10px;align-items:flex-start;font-weight:600;color:rgba(234,240,255,.92);margin-top:4px">
+            <input type="checkbox" name="sms_consent" value="yes" style="width:auto; margin-top:3px" />
+            <span>
+              Yes, you can text me about this request (message &amp; data rates may apply).
+              <span style="display:block;color:rgba(184,196,230,.92);font-size:.9rem;margin-top:6px">
+                See <a href="/sms-terms.html">SMS Terms</a>.
+              </span>
+            </span>
+          </label>
+
           <label>What are you hoping AI helps with?</label>
           <textarea name="goal" placeholder="1–2 sentences is perfect. Ex: customer intake, marketing, scheduling, admin…"></textarea>
 
