Homepage: show only Voice + Vets; hide Pricing/Intake

--- a/public/index.html
+++ b/public/index.html
@@ -64,10 +64,8 @@
     <div class="nav">
       <div class="brand"><span class="dot"></span> Squidworks AI</div>
       <div class="pill">
-        <a href="/pricing.html" class="btn ghost">Pricing</a>
         <a href="/voice.html" class="btn ghost">Voice agents</a>
         <a href="/vets.html" class="btn ghost">Vets</a>
-        <a href="/intake.html" class="btn primary">Quick intake</a>
       </div>
     </div>
 
@@ -95,11 +93,10 @@
         </div>
 
         <div class="section">
-          <h2>Choose your entrypoint</h2>
+          <h2>Choose an offer</h2>
           <div class="list">
             <div class="item"><span class="b"></span><div><b>Voice agents</b> — AI receptionist for inbound calls. <a href="/voice.html" class="btn ghost" style="padding:8px 10px;margin-left:8px">Open</a></div></div>
             <div class="item"><span class="b"></span><div><b>Veterans Forum</b> — panel follow-up form. <a href="/vets.html" class="btn ghost" style="padding:8px 10px;margin-left:8px">Open</a></div></div>
-            <div class="item"><span class="b"></span><div><b>Quick intake</b> — build a tailored demo. <a href="/intake.html" class="btn ghost" style="padding:8px 10px;margin-left:8px">Open</a></div></div>
           </div>
         </div>
       </div>
