Add transparent logo mark + use in header

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 <body>
   <div class="wrap">
     <div class="nav">
-      <div class="brand"><span class="dot"></span> Squidworks AI</div>
+      <div class="brand"><img alt="Squidworks" src="/assets/squidworks-mark.png" style="height:28px;width:auto;display:block" /> Squidworks AI</div>
       <div class="pill">
         <a href="/voice.html" class="btn ghost">Voice agents</a>
         <a href="/vets.html" class="btn ghost">Vets</a>
