--- a/public/voice.html
+++ b/public/voice.html
@@ -144,7 +144,7 @@
 <body>
   <div class="wrap">
     <div class="nav">
-      <div class="brand"><span class="dot"></span> Squidworks AI</div>
+      <div class="brand"><img alt="Squidworks" src="/assets/squidworks-mark.png" class="logoMark" /> Squidworks AI</div>
       <div class="pill">
         <a href="/" class="btn ghost">Home</a>
         <a href="/pricing.html" class="btn ghost">Pricing</a>
